[update] deploy stack zabbix

--- a/envs/zabbix-frontend/common.env
+++ b/envs/zabbix-frontend/common.env
@@ -1,9 +1,9 @@
-ZBX_SERVER_HOST=maratonazabbix_zabbix-server
-DB_SERVER_HOST=10.0.0.64
+ZBX_SERVER_HOST=workshop_zabbix-server
+DB_SERVER_HOST=10.0.0.61
 MYSQL_USER=zabbix
-MYSQL_PASSWORD=Curso!Zabbix5
+MYSQL_PASSWORD=Workshop!Zabbix5
 MYSQL_DATABASE=zabbix
 PHP_TZ=America/Sao_Paulo
 TZ=America/Sao_Paulo
-ZBX_SERVER_NAME=Curso Zabbix
+ZBX_SERVER_NAME=Workshop
 ZBX_MEMORYLIMIT=512M
