--- a/envs/zabbix-server/common.env
+++ b/envs/zabbix-server/common.env
@@ -1,7 +1,7 @@
-DB_SERVER_HOST=10.0.0.64
+DB_SERVER_HOST=10.0.0.61
 DB_SERVER_PORT=3306
 MYSQL_USER=zabbix
-MYSQL_PASSWORD=Curso!Zabbix5
+MYSQL_PASSWORD=Workshop!Zabbix5
 MYSQL_DATABASE=zabbix
 ZBX_TIMEOUT=30
 ZBX_LISTENIP=
