--- a/steps/haproxy-zbx.cfg
+++ b/steps/haproxy-zbx.cfg
@@ -56,9 +56,9 @@ frontend traefik
 backend backend_traefik
         mode http
         cookie Zabbix prefix
-        server dockerhost-01 10.0.0.61:80 cookie dockerhost-01 check
-        server dockerhost-02 10.0.0.62:80 cookie dockerhost-02 check
-        server dockerhost-03 10.0.0.63:80 cookie dockerhost-03 check
+        server docker01 10.0.0.62:80 cookie docker01 check
+        server docker02 10.0.0.63:80 cookie docker02 check
+        server docker03 10.0.0.64:80 cookie docker03 check
         stats admin  if TRUE
         option tcp-check
 
