--- a/steps/haproxy-zbx.cfg
+++ b/steps/haproxy-zbx.cfg
@@ -69,8 +69,8 @@ frontend zabbix_server
 
 backend backend_zabbix_server
         mode tcp
-        server dockerhost-01 10.0.0.61:10051 check
-        server dockerhost-01 10.0.0.62:10051 check
-        server dockerhost-01 10.0.0.63:10051 check
+        server docker01 10.0.0.61:10051 check
+        server docker02 10.0.0.62:10051 check
+        server docker03 10.0.0.63:10051 check
         stats admin if TRUE
         option tcp-check
